--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi
-uvicorn
-pandas
-numpy
-tensorflow
-scikit-learn
-yfinance
+fastapi==0.115.0
+uvicorn==0.30.6
+pandas==2.2.3
+numpy==2.1.1
+tensorflow==2.17.0
+scikit-learn==1.5.2
+yfinance==0.2.44
