--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-python-dotenv==1.0.1
 fastapi==0.115.0
-uvicorn==0.30.6
-pandas==2.2.3
-numpy==2.1.1
+uvicorn==0.30.0
+pandas==2.2.2
+numpy==1.26.4
 tensorflow==2.20.0
-scikit-learn==1.5.2
-yfinance==0.2.44
+scikit-learn==1.5.1
+yfinance==0.2.43
+python-dotenv==1.0.1
+google-generativeai==0.7.2
