--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi==0.115.0
-uvicorn==0.30.6
-pandas==2.2.2
-numpy==1.26.4
-tensorflow==2.15.0
-scikit-learn==1.4.2
-yfinance==0.2.40
-python-dotenv==1.0.1
-google-generativeai==0.7.2
-gunicorn==23.0.0
+fastapi
+uvicorn
+pandas
+numpy
+tensorflow
+scikit-learn
+yfinance
+python-dotenv
+google-generativeai
+gunicorn
